--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2018"
 
 [dependencies]
 tch = "0.5.0"
-condor = {path="../../Documents/condor"}
-mako = {path="../../Documents/mako"}
+condor = {path="../../Documents/other/condor"}
+dataflow = {path="../../Documents/other/dataflow"}
 serde_json = "1.0.59"
 serde = "1.0.126"
 clap = "3.0.0-beta.2"
